Improve iOS iframe overflow fix

--- a/jquery.sceditor.default.css
+++ b/jquery.sceditor.default.css
@@ -5,8 +5,14 @@ html, body, p, code:before, table {
 	font-size: 13px;
 	color: #111;
 }
-html { height: 100%; }
+html {
+	height: 100%;
+	overflow: auto; 
+	-webkit-overflow-scrolling: touch; 
+}
 body {
+	overflow: auto; 
+	-webkit-overflow-scrolling: touch; 
 	min-height: 100%;
 	word-wrap: break-word;
 }
