--- a/themes/default.less
+++ b/themes/default.less
@@ -47,10 +47,6 @@ div.sceditor-dropdown, div.sceditor-dropdown div {
 		resize: none;
 		background: #fff;
 	}
-	div.ios-fix {
-	  -webkit-overflow-scrolling: touch !important;
-	  overflow: scroll !important;
-	}
 	div.sceditor-resize-cover {
 		position: absolute;
 		top: 0;
